--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,8 @@
   --foreground: #171717;
 }
 
-@theme inline {
+@theme {
+  --breakpoint-pc: 940px;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
