--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); /* 다크 모드 */
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
   --breakpoint-pc: 940px;
